read HTML table test added , timestamp, print into txt file , reports

--- a/Configuration/config.ini
+++ b/Configuration/config.ini
@@ -13,3 +13,8 @@ R_message = Catty likes to eat cat food
 
 [purchase url]
 baseURl = https://ultimateqa.com/
+
+
+[HTML paths]
+rows = //table[contains(@id,'htmlTableId')]//tr
+cols = //table[contains(@id,'htmlTableId')]//tr[2]/td
